--- a/Solution_Evraz.ipynb
+++ b/Solution_Evraz.ipynb
@@ -18,8 +18,7 @@
         "Z6cmidg122Xa",
         "yn2J9HC6jZiq",
         "LDJDnv8hB-e5"
-      ],
-      "include_colab_link": true
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -287,16 +286,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Mityal999/Evraz/blob/main/Solution_Evraz.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -598,7 +587,7 @@
       "source": [
         "def total_ves(NPLV, VDSYP):\n",
         "    mezh_rez = sip\n",
-        "    return mezh_rez[mezh_rez['NPLV'] == NPLV][mezh_rez['NMSYP']==VDSYP]['VSSYP'].sum()\n",
+        "    return mezh_rez.groupby(['NPLV'])[i].sum()\n",
         "\n",
         "for i in [\"изв_ЦОИ\",\"Уголь ТО\",\"ФЛЮМАГ\",\"Флюс ФОМИ\",\"изв отсев\",\"Долом(сыр)\"]:\n",
         "    for t in regr['NPLV']:\n",
